Create customizable form

--- a/_data/store-hours.yml
+++ b/_data/store-hours.yml
@@ -2,8 +2,8 @@
   storeLogo: images/logo-hub.svg
   storeAddress1: 14 Industrial Dr
   storeAddress2: Almonte, ON K0A 1A0
-  monOpen: 1pm
-  monClose: 4pm
+  monOpen: 10am
+  monClose: 5pm
   tuesOpen: 9am
   tuesClose: 4pm
   wedOpen: 9am
