--- a/_data/page-content.yml
+++ b/_data/page-content.yml
@@ -5,6 +5,14 @@
   heroBtn: true
   heroBtnLink: about/
   heroBtnText: Learn More
+- title: About
+  hero: false
+  h1Text: Help us give back to the community!
+  byline: false
+  bylineText: Hub & Rebound’s volunteers play an integral role in every aspect of the organization.
+  heroBtn: false
+  heroBtnLink:
+  heroBtnText:
 - title: Volunteer
   hero: false
   h1Text: Help us give back to the community!
@@ -16,6 +24,14 @@
 - title: News & Events
   hero: false
   h1Text: News & Events
+  byline: false
+  bylineText: Hub & Rebound’s volunteers play an integral role in every aspect of the organization.
+  heroBtn: false
+  heroBtnLink:
+  heroBtnText:
+- title: Donate
+  hero: false
+  h1Text: Donate
   byline: false
   bylineText: Hub & Rebound’s volunteers play an integral role in every aspect of the organization.
   heroBtn: false
