Create about page

--- a/_data/page-content.yml
+++ b/_data/page-content.yml
@@ -6,13 +6,13 @@
   heroBtnLink: about/
   heroBtnText: Learn More
 - title: About
-  hero: false
-  h1Text: Help us give back to the community!
-  byline: false
-  bylineText: Hub & Rebound’s volunteers play an integral role in every aspect of the organization.
-  heroBtn: false
-  heroBtnLink:
-  heroBtnText:
+  hero: true
+  h1Text: About The Hub & Rebound
+  byline: true
+  bylineText: The Hub & Rebound have a rich history serving the community. Learn how countless volunteers have selflessy given their time to help us grow into what we are today.
+  heroBtn: true
+  heroBtnLink: '#history'
+  heroBtnText: Learn More
 - title: Volunteer
   hero: false
   h1Text: Help us give back to the community!
@@ -25,7 +25,7 @@
   hero: false
   h1Text: News & Events
   byline: false
-  bylineText: Hub & Rebound’s volunteers play an integral role in every aspect of the organization.
+  bylineText:
   heroBtn: false
   heroBtnLink:
   heroBtnText:
