--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,21 +1,28 @@
 - logo: logo-hub.svg
   title: The Hub
   shortDesc: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  longDesc: Long ipsum dolor sit amet, consectetur adipiscing elit. Long ipsum dolor sit amet, consectetur adipiscing elit.
+  longDesc:
+    - Located in the heart of Almonte, The Hub is a not-for-profit retail store run by the Almonte Community Co-ordinators. Focused on supporting the community of Mississippi Mills since its inception in 1974, the Hub accepts donations of gently used family fashions, accessories, housewares, books, games and toys. These items are resold at the Hub, allowing the organization to support local charities.
+    - Annually, over $50,000 is donated towards hospice care, scholarships, health needs, sport teams, special events, Christmas baskets, Interval House, the Lanark County Food Bank and so much more.
+    - The Hub is operated by volunteers, and opens six days a week.
   link: the-hub
   reversed: true
   bgImg: the-hub.jpg
 - logo: logo-rebound.svg
   title: Rebound
   shortDesc: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  longDesc: Long ipsum dolor sit amet, consectetur adipiscing elit. Long ipsum dolor sit amet, consectetur adipiscing elit.
+  longDesc:
+    - REBOUND was established by the Hub to provide a convenient drop-off centre for large home furnishings, small appliances, computers and electronics.
+    - Since its inception in 2004, Rebound has diverted over 350 tonnes from local landfills by operating a practical used furniture and home décor store.
+    - Open six days a week, Rebound is your destination for buying or donating large household items.
   link: rebound
   reversed: false
   bgImg: rebound.jpg
 - logo: hub-hospice-logo.png
   title: Hub Hospice
   shortDesc: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  longDesc: Long ipsum dolor sit amet, consectetur adipiscing elit. Long ipsum dolor sit amet, consectetur adipiscing elit.
-  link: rebound
+  longDesc:
+    - 'Through supportive programs directed by the client, Hub Hospice staff and volunteers focus on compassionate listening, companionship, emotional support, and the sharing of information and resources. In-home visiting volunteers also provide an opportunity for families and caregivers to rest or undertake activities outside the home. All services offered by Hub Hospice are confidential and free of charge. Visit the <a href="https://www.hubhospice.com/" target="_blank">Hub Hospice website</a> to learn more.'
+  link: hubhospice
   reversed: true
   bgImg: hub-hospice.jpg
