Update contact info in site.yml

--- a/_data/site.yml
+++ b/_data/site.yml
@@ -1,2 +1,9 @@
+# Contact Information
+
 tel: "+16132565225"
 telDisplay: "(613) 256-5225"
+email: "info@thehubalmonte.com"
+hubAddressLine1: "14 Industrial Dr"
+hubAddressLine2: "Almonte, ON K0A 1A0"
+reboundAddressLine1: "14 Industrial Dr"
+reboundAddressLine2: "Almonte, ON K0A 1A0"
