--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,16 +5,31 @@ backend:
 media_folder: "images/uploads"
 
 collections:
-  - name: "website-settings"
-    label: "Website Setings"
+  - name: "contact-information"
+    label: "Contact Information"
     files:
-      - label: "Website Settings"
+      - label: "Contact Information"
         name: "site"
         file: "_data/site.yml"
         fields:
-          - label: "Telephone Number Data"
+          - label: "Telephone Number Data (No spaces or dashes)"
             name: "tel"
             widget: "string"
           - label: "Telephone Number Display"
             name: "telDisplay"
+            widget: "string"
+          - label: "Email"
+            name: "email"
+            widget: "string"
+          - label: "The Hub Address Line 1"
+            name: "hubAddressLine1"
+            widget: "string"
+          - label: "The Hub Address Line 2"
+            name: "hubAddressLine2"
+            widget: "string"
+          - label: "Rebound Address Line 1"
+            name: "reboundAddressLine1"
+            widget: "string"
+          - label: "Rebound Address Line 2"
+            name: "reboundAddressLine2"
             widget: "string"
