Update contact info to accept content changes

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -27,9 +27,15 @@ collections:
           - label: "The Hub Address Line 2"
             name: "hubAddressLine2"
             widget: "string"
+          - label: "The Hub Map Link"
+            name: "hubMapLink"
+            widget: "string"
           - label: "Rebound Address Line 1"
             name: "reboundAddressLine1"
             widget: "string"
           - label: "Rebound Address Line 2"
             name: "reboundAddressLine2"
+            widget: "string"
+          - label: "Rebound Map Link"
+            name: "reboundMapLink"
             widget: "string"
