Fix labeling error

--- a/_data/site.yml
+++ b/_data/site.yml
@@ -8,4 +8,4 @@ hubAddressLine2: "Almonte, ON K0A 1A0"
 hubMapLink: "https://goo.gl/maps/2viaCeAw5n32"
 reboundAddressLine1: "14 Industrial Dr"
 reboundAddressLine2: "Almonte, ON K0A 1A0"
-hubMapLink: "https://goo.gl/maps/2viaCeAw5n32"
+reboundMapLink: "https://goo.gl/maps/2viaCeAw5n32"
