Uplaod home page data file

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -21,21 +21,41 @@ collections:
           - label: "Email"
             name: "email"
             widget: "string"
-          - label: "The Hub Address Line 1"
-            name: "hubAddressLine1"
-            widget: "string"
-          - label: "The Hub Address Line 2"
-            name: "hubAddressLine2"
-            widget: "string"
-          - label: "The Hub Map Link"
-            name: "hubMapLink"
-            widget: "string"
-          - label: "Rebound Address Line 1"
-            name: "reboundAddressLine1"
-            widget: "string"
-          - label: "Rebound Address Line 2"
-            name: "reboundAddressLine2"
-            widget: "string"
-          - label: "Rebound Map Link"
-            name: "reboundMapLink"
-            widget: "string"
+          - label: "The Hub Contact Info"
+            name: "hubContact"
+            widget: "object"
+            fields:
+            - label: "Telephone Number Data (No spaces or dashes)"
+              name: "tel"
+              widget: "string"
+            - label: "Telephone Number Display"
+              name: "telDisplay"
+              widget: "string"
+            - label: "Address Line 1"
+              name: "addressLine1"
+              widget: "string"
+            - label: "Address Line 2"
+              name: "addressLine2"
+              widget: "string"
+            - label: "Map Link"
+              name: "mapLink"
+              widget: "string"
+          - label: "Rebound Contact Info"
+            name: "reboundContact"
+            widget: "object"
+            fields:
+            - label: "Telephone Number Data (No spaces or dashes)"
+              name: "tel"
+              widget: "string"
+            - label: "Telephone Number Display"
+              name: "telDisplay"
+              widget: "string"
+            - label: "Address Line 1"
+              name: "addressLine1"
+              widget: "string"
+            - label: "Address Line 2"
+              name: "addressLine2"
+              widget: "string"
+            - label: "Map Link"
+              name: "mapLink"
+              widget: "string"
