Add quotes to home data

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -59,3 +59,37 @@ collections:
             - label: "Map Link"
               name: "mapLink"
               widget: "string"
+  - label: "Pages"
+    name: "pages"
+    files:
+      - label: "Home Page"
+        name: "home"
+        file: _data/pages/home.yml
+        fields:
+          - label: "Include Banner?"
+            name: "hero"
+            widget: "boolean"
+            hint: "Turn on to include banner at top of the page."
+          - label: "Banner"
+            name: "banner"
+            widget: "object"
+            fields:
+              - label: "Banner Title"
+                name: "h1Text"
+                widget: "string"
+              - label: "Banner Subtitle"
+                name: "bylineText"
+                widget: "string"
+              - label: "Banner Button"
+                name: "banner-button"
+                widget: "object"
+                fields:
+                  - label: "Include button in banner?"
+                    name: "heroBtn"
+                    widget: "boolean"
+                  - label: "Button Link"
+                    name: "heroBtnLink"
+                    widget: "string"
+                  - label: "Button Text"
+                    name: "heroBtntext"
+                    widget: "string"
