Create group for banner data

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -66,6 +66,9 @@ collections:
         name: "home"
         file: _data/pages/home.yml
         fields:
+          - label: "Page Title"
+            name: "title"
+            widget: "string"
           - label: "Include Banner?"
             name: "hero"
             widget: "boolean"
@@ -87,9 +90,14 @@ collections:
                   - label: "Include button in banner?"
                     name: "heroBtn"
                     widget: "boolean"
+                    hint: "Turn on to include button in banner."
                   - label: "Button Link"
                     name: "heroBtnLink"
                     widget: "string"
                   - label: "Button Text"
                     name: "heroBtntext"
                     widget: "string"
+          - label: "Include sponsor bar?"
+            name: "sponsorBar"
+            widget: "boolean"
+            hint: "Turn on to include list of sponsors at bottom of page above footer."
