--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -1,9 +1,10 @@
 title: "Home"
-hero: true
-heroBG: "hero-home.jpg"
-h1Text: "Giving back to the community since 1974."
-bylineText: "The Hub’s goal has always been to service the greater Almonte community and be there when they need us most."
-heroBtn: true
-heroBtnLink: "about/"
-heroBtnText: "Learn More"
+banner:
+  hero: true
+  heroBG: "hero-home.jpg"
+  h1Text: "Giving back to the community since 1974."
+  bylineText: "The Hub’s goal has always been to service the greater Almonte community and be there when they need us most."
+  heroBtn: true
+  heroBtnLink: "about/"
+  heroBtnText: "Learn More"
 sponsorBar: true
