--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -4,7 +4,8 @@ banner:
   heroBG: "hero-home.jpg"
   h1Text: "Giving back to the community since 1974."
   bylineText: "The Hub’s goal has always been to service the greater Almonte community and be there when they need us most."
-  heroBtn: true
-  heroBtnLink: "about/"
-  heroBtnText: "Learn More"
+  bannerButton:
+    heroBtn: true
+    heroBtnLink: "about/"
+    heroBtnText: "Learn More"
 sponsorBar: true
