Fix hero button label

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   repo: arobillard/the-hub-almonte
 
 media_folder: "images/uploads"
+display_url: https://your-site.com
 
 collections:
   - name: "contact-information"
