--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -1,14 +1,12 @@
-title: "home"
+title: home
 hero: true
 banner:
   bannerButton:
     heroBtn: true
     heroBtnLink: about/
-    heroBtnText: Learn More
-    heroBtnStyle: basic
   bylineText: >-
     The Hub’s goal has always been to service the greater Almonte community and
     be there when they need us most.
-  h1Text: Giving back to the community since 1974.
-  heroImg: "/images/uploads/hero-home.jpg"
+  h1Text: Giving back to the community since 2018.
+  heroImg: /images/uploads/hero-home.jpg
 sponsorBar: true
