Update image paths and create About data file

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -105,3 +105,45 @@ collections:
             name: "sponsorBar"
             widget: "boolean"
             hint: "Turn on to include list of sponsors at bottom of page above footer."
+      - label: "About"
+        name: "about"
+        file: _data/pages/about.yml
+        fields:
+          - label: "Page Title"
+            name: "title"
+            widget: "string"
+          - label: "Include Banner?"
+            name: "hero"
+            widget: "boolean"
+            hint: "Turn on to include banner at top of the page."
+          - label: "Banner"
+            name: "banner"
+            widget: "object"
+            fields:
+              - label: "Banner Title"
+                name: "h1Text"
+                widget: "string"
+              - label: "Banner Subtitle"
+                name: "bylineText"
+                widget: "string"
+              - label: "Banner Button"
+                name: "bannerButton"
+                widget: "object"
+                fields:
+                  - label: "Include button in banner?"
+                    name: "heroBtn"
+                    widget: "boolean"
+                    hint: "Turn on to include button in banner."
+                  - label: "Button Link"
+                    name: "heroBtnLink"
+                    widget: "string"
+                  - label: "Button Text"
+                    name: "heroBtnText"
+                    widget: "string"
+              - label: "Banner Image"
+                name: "heroImg"
+                widget: "image"
+          - label: "Include sponsor bar?"
+            name: "sponsorBar"
+            widget: "boolean"
+            hint: "Turn on to include list of sponsors at bottom of page above footer."
