--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -3,11 +3,12 @@ hero: true
 banner:
   bannerButton:
     heroBtn: true
-    heroBtnLink: "#history-hub"
+    heroBtnLink: '#history-hub'
     heroBtnText: Learn More
-    heroBtnStyle: smooth-scroll
   bylineText: >-
-    The Hub & Rebound have a rich history serving the community. Learn how countless volunteers have selflessy given their time to help us grow into what we are today.
+    The Hub & Rebound have a rich history serving the community. Learn how
+    countless volunteers have selflessy given their time to help us grow into
+    what we are today.
   h1Text: About The Hub & Rebound
-  heroImg: /images/uploads/hero-2.jpg
+  heroImg: /images/uploads/contest-prev.jpg
 sponsorBar: true
