Update Pages “about”

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -10,5 +10,5 @@ banner:
     countless volunteers have selflessy given their time to help us grow into
     what we are today.
   h1Text: About The Hub & Rebound
-  heroImg: /images/uploads/contest-prev.jpg
+  heroImg: /images/uploads/hero-2.jpg
 sponsorBar: true
