Update History Slides “history-slides”

--- a/_data/slide.yml
+++ b/_data/slide.yml
@@ -1,5 +1,8 @@
 edit-history-slides:
   - content: >-
+      ## The Hub is great!
+
+
       The Hub is rooted in homegrown origins. In 1972, Neighbourhood Club member
       Mary Dugdale began to collect and give away clothing to anyone who was in
       need.
