--- a/admin/config.yml
+++ b/admin/config.yml
@@ -143,6 +143,29 @@ collections:
               - label: "Banner Image"
                 name: "heroImg"
                 widget: "image"
+          - label: "History Slides"
+            name: "history-slides"
+            file: _data/slide.yml
+            widget: "object"
+            fields:
+              - label: "Edit History Slides"
+                name: "edit-history-slides"
+                widget: "list"
+                fields:
+                  - label: "Slide Name"
+                    name: "name"
+                    widget: "string"
+                    hint: "No capitals, replace spaces with a dash (-)."
+                  - label: "Reverse position of Image and Text?"
+                    name: "reverse"
+                    widget: "boolean"
+                    hint: "If selected, the image will appear on the left and the text will be on the right."
+                  - label: "Slide Text Content"
+                    name: "content"
+                    widget: "markdown"
+                  - label: "Slide Image"
+                    name: "image"
+                    widget: "image"
           - label: "Include sponsor bar?"
             name: "sponsorBar"
             widget: "boolean"
